@@ -5,7 +5,7 @@ Release 1.1:
 2. Use the filenode structure as preparation for directory diff.
 3. Change Revision when editing instead of creating a New revision 
    every time. [PERFORMANCE]
-4. Click on RevisionBar below a certain point lets JTextArea paint in
+4. [done] Click on RevisionBar below a certain point lets JTextArea paint in
    a strange way.
 5. Show linenumbers bar in FilePanel.
 6. Select a diff when searching. (linenumberselection?)
